--- a/DogOrCat/DogOrCat/DogOrCat.csproj
+++ b/DogOrCat/DogOrCat/DogOrCat.csproj
@@ -15,5 +15,13 @@
     <PackageReference Include="Xamarin.Forms" Version="4.0.0.425677" />
     <PackageReference Include="Xamarin.Essentials" Version="1.1.0" />
     <PackageReference Include="Xamarin.Forms.Visual.Material" Version="4.0.0.425677" />
+    <PackageReference Include="Autofac" Version="4.9.2" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="ViewModels\" />
+    <Folder Include="Models\" />
+    <Folder Include="Framework\" />
+    <Folder Include="Views\" />
+    <Folder Include="Events\" />
   </ItemGroup>
 </Project>
