完成程序框架功能， iOS和安卓的主要功能实现

--- a/DogOrCat/DogOrCat/DogOrCat.csproj
+++ b/DogOrCat/DogOrCat/DogOrCat.csproj
@@ -23,5 +23,7 @@
     <Folder Include="Framework\" />
     <Folder Include="Views\" />
     <Folder Include="Events\" />
+    <Folder Include="Interfaces\" />
+    <Folder Include="Converters\" />
   </ItemGroup>
 </Project>
