--- a/DogOrCat/DogOrCat.Android/DogOrCat.Android.csproj
+++ b/DogOrCat/DogOrCat.Android/DogOrCat.Android.csproj
@@ -51,9 +51,6 @@
     <Reference Include="System.Numerics.Vectors" />
   </ItemGroup>
   <ItemGroup>
-    <PackageReference Include="TensorFlowSharp">
-      <Version>1.13.0</Version>
-    </PackageReference>
     <PackageReference Include="Xam.Plugin.Media">
       <Version>4.0.1.5</Version>
     </PackageReference>
@@ -69,11 +66,16 @@
     <PackageReference Include="Xamarin.Forms.Visual.Material">
       <Version>4.0.0.425677</Version>
     </PackageReference>
+    <PackageReference Include="Xam.Android.Tensorflow">
+      <Version>1.0.0</Version>
+    </PackageReference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="MainActivity.cs" />
     <Compile Include="Resources\Resource.designer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TensorFlowClassfication\TensorFlowClassification.cs" />
+    <Compile Include="BootStrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\AboutResources.txt" />
@@ -97,6 +99,7 @@
     <AndroidResource Include="Resources\mipmap-xxhdpi\launcher_foreground.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\icon.png" />
     <AndroidResource Include="Resources\mipmap-xxxhdpi\launcher_foreground.png" />
+    <AndroidResource Include="Resources\xml\file_paths.xml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Resources\drawable-hdpi\" />
@@ -104,12 +107,18 @@
     <Folder Include="Resources\drawable-xxhdpi\" />
     <Folder Include="Resources\drawable-xxxhdpi\" />
     <Folder Include="Resources\drawable\" />
+    <Folder Include="TensorFlowClassfication\" />
+    <Folder Include="Resources\xml\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DogOrCat\DogOrCat.csproj">
-      <Project>{35027058-5C3B-4452-BA7A-2677E366C1CB}</Project>
+      <Project>{C1FFF099-0F82-48F0-822C-9E04AF4FA6BB}</Project>
       <Name>DogOrCat</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <AndroidAsset Include="Assets\labels.txt" />
+    <AndroidAsset Include="Assets\model.pb" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
