--- a/DogOrCat/DogOrCat.iOS/DogOrCat.iOS.csproj
+++ b/DogOrCat/DogOrCat.iOS/DogOrCat.iOS.csproj
@@ -69,6 +69,8 @@
     <None Include="Entitlements.plist" />
     <None Include="Info.plist" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="CoreML\CoreMLClassification.cs" />
+    <Compile Include="BootStrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <InterfaceDefinition Include="Resources\LaunchScreen.storyboard" />
@@ -136,8 +138,16 @@
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
   <ItemGroup>
     <ProjectReference Include="..\DogOrCat\DogOrCat.csproj">
-      <Project>{35027058-5C3B-4452-BA7A-2677E366C1CB}</Project>
+      <Project>{C1FFF099-0F82-48F0-822C-9E04AF4FA6BB}</Project>
       <Name>DogOrCat</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="CoreML\" />
+  </ItemGroup>
+  <ItemGroup>
+    <BundleResource Include="Resources\model.mlmodel">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </BundleResource>
   </ItemGroup>
 </Project>
