--- a/DogOrCat/DogOrCat.Android/DogOrCat.Android.csproj
+++ b/DogOrCat/DogOrCat.Android/DogOrCat.Android.csproj
@@ -118,7 +118,9 @@
   </ItemGroup>
   <ItemGroup>
     <AndroidAsset Include="Assets\labels.txt" />
-    <AndroidAsset Include="Assets\model.pb" />
+    <AndroidAsset Include="Assets\model.pb">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </AndroidAsset>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
